--- a/_includes/form/presets/licences.html
+++ b/_includes/form/presets/licences.html
@@ -1,4 +1,4 @@
-{%- assign title = "licenses" -%}
+{%- assign title = "licences" -%}
 <div class="add-more-group" id="addMore{{ title }}" data-title="{{ title }}">
 {% include form/components/title.html id=include.id title=title -%}
 <div class="add-more-content">
