--- a/_includes/schema/loop.html
+++ b/_includes/schema/loop.html
@@ -16,8 +16,8 @@
           {%- include schema/presets/homepageURL.html id=idPreset -%}
         {%- when 'languages' -%}
           {%- include schema/presets/languages.html id=idPreset -%}
-        {%- when 'licenses' -%}
-          {%- include schema/presets/licenses.html id=idPreset -%}
+        {%- when 'licences' -%}
+          {%- include schema/presets/licences.html id=idPreset -%}
         {%- when 'orgLevel' -%}
           {%- include schema/presets/orgLevel.html id=idPreset -%}
         {%- when 'provinceSelect' -%}
