--- a/_includes/schema/presets/licences.html
+++ b/_includes/schema/presets/licences.html
@@ -1,4 +1,4 @@
-{%- assign title = "licenses" -%}
+{%- assign title = "licences" -%}
 <li>
   <details open>
     <summary>{{ title }} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span> [array]</summary>
