--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="form-group">
-        <label for="dt_department">{{ site.data.i18n.form.administration.title[page.lang] }}</label>
+        <label for="dt_department">{{ site.data.i18n.tables.administrations[page.lang] }}</label>
         <select class="form-control" id="dt_department" name="dt_department" data-column="0">
           <option value="">&nbsp;</option>
           {%- assign admin_arr = "" | split: "," -%}
@@ -35,7 +35,7 @@
       </div>
 
       <div class="form-group">
-        <label for="dt_organization">{{ site.data.i18n.form.presets.organization.schema[page.lang] }}</label>
+        <label for="dt_organization">{{ site.data.i18n.form.code.organization.label.schema[page.lang] }}</label>
         <select class="form-control" id="dt_organization" name="dt_organization" data-column="5">
           <option value="">&nbsp;</option>
           {%- assign org_arr = "" | split: "," -%}
