--- a/_includes/standardTable.html
+++ b/_includes/standardTable.html
@@ -6,7 +6,7 @@
     <summary><h4 class="h4">{{ site.data.i18n.tables.filterOptions[page.lang] }}</h4></summary>
     <form class="wb-tables-filter" data-bind-to="dataset-filter">
       <div class="form-group">
-        <label for="dt_govLevel">{{ site.data.i18n.tables.levelOfGovernment[page.lang] }}</label>
+        <label for="dt_govLevel">{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</label>
         <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="4">
           <option value="">&nbsp;</option>
           {%- for govLevels in site.data.i18n.administrations -%}
@@ -20,16 +20,17 @@
         <label for="dt_tag">Tag</label>
         <select class="form-control" id="dt_tag" name="dt_tag" data-column="3">
           <option value="">&nbsp;</option>
-          {%- assign tag_array = "" | split: ',' -%}
-          {%- for standards in site.data.normes_ouvertes-open_standards -%}
+          {%- assign tag_arr = "" | split: "," -%}
+          {%- for standards in site.data.db.standard.standards -%}
             {%- assign standard = standards[1] -%}
-            {%- for tag in standard.tags[page.lang] -%}
-              {%- assign tag_array = tag_array | push: tag -%}
+            {%- for tags in standard.tags[page.lang] -%}
+              {%- assign tag = tags | capitalize -%}
+              {%- assign tag_arr = tag_arr | push: tag -%}
             {%- endfor -%}
           {%- endfor -%}
-          {%- assign tag_array = tag_array | group_by: "" | sort: "name" -%}
-          {%- for tag in tag_array -%}
-            <option value="{{ tag.name }}">{{ tag.name }}</option>
+          {%- assign tag_arr = tag_arr | sort_natural | uniq -%}
+          {%- for tag in tag_arr -%}
+            <option value="{{ tag }}">{{ tag }}</option>
           {%- endfor -%}
         </select>
       </div>
@@ -52,50 +53,38 @@
   <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [0, "asc"], "columnDefs": [{"targets": [3,4], "visible": false}], "paging": true}'>
     <thead>
       <tr>
-        <!-- TODO:Translations, maybe use those from the form file -->
-        <th>Standard</th>
-        <th>Description</th>
-        <th>Organization</th>
-        <th>Tags</th>
-        <th>Level of government</th>
+        <th>{{ site.data.i18n.tables.standard[page.lang] }}</th>
+        <th>{{ site.data.i18n.form.presets.description.label.schema[page.lang] }}</th>
+        <th>{{ site.data.i18n.form.code.organization.label.schema[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
+        <th>{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</th>
       </tr>
     </thead>
     <tbody>
-
-      {%- for standards in site.data.normes_ouvertes-open_standards -%}
+      {%- for standards in site.data.db.standard.standards -%}
         {%- assign standard = standards[1] -%}
         <tr>
           <td><a href="#{{ standard.name[page.lang] | slugify }}" aria-controls="{{ standard.name[page.lang] | slugify }}" class="overlay-lnk" role="button">{{ standard.name[page.lang] }}</a></td>
           <td>{{ standard.description[page.lang] }}</td>
-          <td><a href="{{ standard.specURL[page.lang] }}" target="_blank">{{ standard.standardsOrg }}</a></td>
+          <td><a href="{{ standard.specURL[page.lang] }}" target="_blank">{{ standard.standardOrg }}</a></td>
           <td>
             {%- for tag in standard.tags[page.lang] -%}
               {{ tag }}&nbsp;
             {%- endfor -%}
           </td>
+          {%- assign level_arr = "" | split: "," -%}
+          {%- for administration in standard.administrations -%}
+            {%- assign parent = site.data.db.administrations[administration].parent -%}
+            {%- assign level_arr = level_arr | push: site.data.i18n.administrations[parent][page.lang] -%}
+          {%- endfor -%}
+          {%- assign level_arr = level_arr | uniq -%}
           <td>
-            {% for administration in standard.administrations %}
-            {% assign aName = site.data.administrations.federal | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.federal[page.lang] }}
-              {% endif %}
-            {% assign aName = site.data.administrations.provincial | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.provincial[page.lang] }}
-              {% endif %}
-            {% assign aName = site.data.administrations.municipal | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.municipal[page.lang] }}
-              {% endif %}
-            {% assign aName = site.data.administrations.aboriginal | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.aboriginal[page.lang] }}
-              {% endif %}
-            {% endfor %}
+            {%- for level in level_arr -%}
+            {{ level }}&nbsp;
+            {%- endfor -%}
           </td>
         </tr>
       {%- endfor -%}
-
     </tbody>
   </table>
 </div>
