Updated js for new DB (tmp raw.githubusercontent path for testing purposes)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,6 +43,7 @@
 <script src="../assets/js/src/tags.js"></script>
 <script src="../assets/js/src/programmingLanguages.js"></script>
 <script src="../assets/js/src/more-group.js"></script>
+<script src="../assets/js/src/slugify.js"></script>
 {%- if page.ref == "adminForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
 {%- endif -%}
