Software updated w/ new DB

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -55,9 +55,9 @@
 <script src="../assets/js/src/adminForm.js"></script>
 <script src="../assets/js/src/standardsForm.js"></script>
 {%- endif -%}
-{%- if page.ref == "ossForm" -%}
+{%- if page.ref == "softwareForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
-<script src="../assets/js/src/ossForm.js"></script>
+<script src="../assets/js/src/softwareForm.js"></script>
 {%- endif %}
 <script>
   const REPO_NAME = "{{ site.github_repository }}";
