--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -40,8 +40,8 @@
       {% include form/presets/selectStandard.html id=id -%}
     {%- when 'selectCode' -%}
       {% include form/presets/selectCode.html id=id -%}
-    {%- when 'selectOss' -%}
-      {% include form/presets/selectOss.html id=id -%}
+    {%- when 'selectSoftware' -%}
+      {% include form/presets/selectSoftware.html id=id -%}
     {% when 'newAdmin' %}
       {% include form/presets/newAdmin.html id=idPreset %}
     {%- when 'hr' -%}
