--- a/_includes/schema/loop.html
+++ b/_includes/schema/loop.html
@@ -36,8 +36,8 @@
           <!-- SelectStandard -->
         {%- when 'selectCode' -%}
           {%- include schema/presets/selectCode.html id=idPreset -%}
-        {%- when 'selectOss' -%}
-          <!-- SelectOss -->
+        {%- when 'selectSoftware' -%}
+          <!-- SelectSoftware -->
         {%- when 'newAdmin' -%}
           {%- include schema/presets/newAdmin.html id=idPreset -%}
         {%- when 'hr' -%}
