--- a/_includes/form/presets/selectStandard.html
+++ b/_includes/form/presets/selectStandard.html
@@ -4,9 +4,9 @@
   {% include form/components/label-group.html id=include.id title=title group=group required=false %}
   <select class="form-control" id="{{ title }}{{ group }}" name="{{ title }}{{ group }}">
     <option value="">&nbsp;</option>
-    {%- for standards in site.data.normes_ouvertes-open_standards -%}
+    {%- for standards in site.data.db.standard.standards -%}
       {%- assign standard = standards[1] %}
-      <option value="{{ standard.standardCode }}">{{ standard.standardCode }}</option>
+      <option value="{{ standard.standardCode | slugify }}">{{ standard.standardCode }}</option>
     {%- endfor %}
   </select>
 </div>
