--- a/_includes/form/components/group.html
+++ b/_includes/form/components/group.html
@@ -1,4 +1,4 @@
 <div class="form-group">
-  {% include form/components/label.html id=include.id title=include.title required=include.required prepend=include.prepend %}
-  {% include form/components/input.html title=include.title type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule prepend=include.prepend %}
+  {% include form/components/label.html id=include.id title=include.title param=include.param %}
+  {% include form/components/input.html title=include.title param=include.param %}
 </div>
