--- a/_includes/form/components/label-i18n.html
+++ b/_includes/form/components/label-i18n.html
@@ -1,4 +1,5 @@
-<label for="{{ include.prepend }}{{ include.lang }}{{ include.title }}"
-  {%- if include.required == nil or include.required %} class="required"{% endif -%}
+<label for="{{ include.param.prepend }}{{ include.lang }}{{ include.title }}"
+{%- include form/components/required_class.html required=include.param.required -%}
 >{{ site.data.i18n.form[include.id][path].label[include.lang][page.lang] }}
-{%- if include.required == nil or include.required %} <strong class="required">({{ site.data.i18n.form.required[page.lang] }})</strong>{% endif %}</label>
+{%- include form/components/required.html required=include.param.required -%}
+</label>
