--- a/_includes/form/presets/languages.html
+++ b/_includes/form/presets/languages.html
@@ -1,8 +1,8 @@
 {%- assign title = "languages" -%}
-{%- include form/components/title.html id=include.id title=title -%}
+{%- include form/components/title.html id=include.idPreset title=title -%}
 
 <div class="form-group">
-  <label>{{ site.data.i18n.form[include.id][title].label[page.lang] }}</label>
+  <label>{{ site.data.i18n.form[include.idPreset][title].label[page.lang] }}</label>
   {%- assign languages_arr = "" | split: "," -%}
   {%- for codes in site.data.db.code.releases -%}
     {%- assign code = codes[1] -%}
@@ -19,5 +19,5 @@
     <div class="checkbox"><label><input class="{{ language }}" data-for="languages" type="checkbox" value="{{ language }}" name="{{ language }}"> {{ language  }} </label></div>
     {%- endfor %}
   </div>
-  <button type="button" class="btn btn-primary" onclick="addMoreLanguages()"><i class="glyphicon glyphicon-plus"></i> {{ site.data.i18n.form.[include.id][title].button[page.lang] }}</button>
+  <button type="button" class="btn btn-primary" onclick="addMoreLanguages()"><i class="glyphicon glyphicon-plus"></i> {{ site.data.i18n.form.[include.idPreset][title].button[page.lang] }}</button>
 </div>
