--- a/_includes/form/presets/orgLevel.html
+++ b/_includes/form/presets/orgLevel.html
@@ -1,8 +1,8 @@
 {% assign title = "orgLevel" %}
-{% include form/components/title.html id=include.id title=title -%}
+{% include form/components/title.html id=include.idPreset title=title -%}
 
 <div class="form-group">
-  {% include form/components/label.html id=include.id title=title %}
+  {% include form/components/label.html id=include.idPreset title=title %}
   <select class="form-control" id="{{ title }}" name="{{ title }}" required="required">
     <option value="">&nbsp;</option>
     <option value="{{ site.data.i18n.administrations.aboriginal.value }}">{{ site.data.i18n.administrations.aboriginal[page.lang] }}</option>
