--- a/_includes/form/widgets/string-i18n.html
+++ b/_includes/form/widgets/string-i18n.html
@@ -1,5 +1,5 @@
-{%- if include.more %}<div class="add-more-group" id="addMore{{ include.title }}" data-title="{{ include.title }}">{% endif -%}
-{%- include form/components/title.html id=include.id title=include.title prepend=include.prepend -%}
-{%- if include.more %}<div class="add-more-content">{% endif -%}
-{%- include form/components/group-i18n.html id=include.id title=include.title required=include.required type=include.type value=include.value readonly=include.readonly rule=include.rule prepend=include.prepend -%}
-{%- if include.more -%}</div></div>{%- endif -%}
+{%- if include.param.more %}<div class="add-more-group" id="addMore{{ include.title }}" data-title="{{ include.title }}">{% endif -%}
+{%- include form/components/title.html id=include.id title=include.title param=include.param -%}
+{%- if include.param.more %}<div class="add-more-content">{% endif -%}
+{%- include form/components/group-i18n.html id=include.id title=include.title param=include.param -%}
+{%- if include.param.more -%}</div></div>{%- endif -%}
