--- a/_includes/softwareTable.html
+++ b/_includes/softwareTable.html
@@ -72,7 +72,7 @@
     <thead>
       <tr>
         <th>{{ site.data.i18n.tables.software[page.lang] }}</th>
-        <th>{{ site.data.i18n.form.presets.description.label.schema[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.description[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.licence[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.usage[page.lang] }}</th>
