--- a/_includes/standardTable.html
+++ b/_includes/standardTable.html
@@ -54,8 +54,8 @@
     <thead>
       <tr>
         <th>{{ site.data.i18n.tables.standard[page.lang] }}</th>
-        <th>{{ site.data.i18n.form.presets.description.label.schema[page.lang] }}</th>
-        <th>{{ site.data.i18n.form.code.organization.label.schema[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.description[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.organization[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
         <th>{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</th>
       </tr>
