--- a/_includes/form/components/label-group.html
+++ b/_includes/form/components/label-group.html
@@ -1,5 +1,4 @@
 {%- capture path -%}{{ include.prepend }}{{ include.title }}{%- endcapture -%}
 <label for="{{ path }}{{ include.group }}"
   {%- if include.required == nil or include.required %} class="required"{% endif -%}
->{{ site.data.i18n.form[include.id][path].labels[include.group][page.lang] }}
-{%- if include.required == nil or include.required %} <strong class="required">({{ site.data.i18n.form.required[page.lang] }})</strong>{% endif %}</label>
+>{{ site.data.i18n.form[include.id][path].labels[include.group][page.lang] }}</label>
