--- a/_includes/form/presets/adminCode.html
+++ b/_includes/form/presets/adminCode.html
@@ -1,5 +1,6 @@
 {%- assign title = "adminCode" %}
 {%- include form/components/title.html id=include.id title=title -%}
+{{ site.data.i18n.form.presets.adminCode.subTitle[page.lang] }}
 <div class="form-group">
   {% include form/components/label.html id=include.id title=title %}
   <div class="form-group" style="display: flex;">
