Correction include with param

--- a/_includes/form/presets/licences.html
+++ b/_includes/form/presets/licences.html
@@ -2,7 +2,7 @@
 <div class="add-more-group" id="addMore{{ title }}" data-title="{{ title }}">
 {% include form/components/title.html id=include.idPreset title=title -%}
 <div class="add-more-content">
-{% include form/components/group-i18n-group.html id=include.idPreset title=title group="URL" type="url" -%}
+{% include form/components/group-i18n-group.html id=include.idPreset title=title group="URL" param=site.data.forms.param.licenses -%}
 {%- include form/components/group-group.html id=include.idPreset title=title group="spdxID" -%}
 </div>
 </div>
