--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,6 +44,7 @@
 <script src="../assets/js/src/programmingLanguages.js"></script>
 <script src="../assets/js/src/more-group.js"></script>
 <script src="../assets/js/src/slugify.js"></script>
+<script src="../assets/js/src/date.js"></script>
 {%- if page.ref == "adminForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
 {%- endif -%}
