--- a/_includes/form/presets/contact.html
+++ b/_includes/form/presets/contact.html
@@ -1,17 +1,12 @@
 {%- assign title = "contact" -%}
 {%- include form/components/title.html id=include.idPreset title=title -%}
 
-{%- include form/components/group-i18n-group.html id=include.idPreset title=title group="URL" required=false -%}
+{%- include form/components/group-i18n-group.html id=include.idPreset title=title group="URL" param=site.data.forms.param.contact.url -%}
+{%- include form/components/group-group.html id=include.idPreset title=title group="email" param=site.data.forms.param.contact.email -%}
 
-{%- if include.param.required == nil or include.param.required == true -%}
-  {% assign required = true -%}
-{%- else -%}
-  {% assign required = false -%}
-{%- endif -%}
-{%- include form/components/group-group.html id=include.idPreset title=title group="email" required=required type="email" -%}
-
-{%- include form/components/group-group.html id=include.idPreset title=title group="name" required=false -%}
+{%- assign include.param.required=false -%}
+{%- include form/components/group-group.html id=include.idPreset title=title group="name" param=site.data.forms.param.contact.name -%}
 
 {%- if include.param.phone == nil or include.param.phone == true -%}
-  {%- include form/components/group-group.html id=include.idPreset title=title group="phone" type="tel" required=false rule="phone" -%}
+  {%- include form/components/group-group.html id=include.idPreset title=title group="phone" param=site.data.forms.param.contact.phone -%}
 {%- endif -%}
