--- a/_includes/form/presets/selectStandard.html
+++ b/_includes/form/presets/selectStandard.html
@@ -1,7 +1,7 @@
 {% assign title = "standardCode" -%}
 {% assign group = "select" -%}
 <div class="form-group">
-  {% include form/components/label-group.html id=include.id title=title group=group required=false %}
+  {% include form/components/label-group.html id=include.id title=title group=group param=site.data.forms.param.selectStandard %}
   <select class="form-control" id="{{ title }}{{ group }}" name="{{ title }}{{ group }}">
     <option value="">&nbsp;</option>
     {%- for standards in site.data.db.standard.standards -%}
